--- a/views/sections/settings/index.html
+++ b/views/sections/settings/index.html
@@ -1,4 +1,4 @@
-<div class="mx-5 mr-8">
+<div class="mx-5 mr-8 flex-wrap-reverse">
   <div class="p-2 m-0">
     <div id="categories" hx-get="/settings/categories" hx-trigger="revealed" hx-target="this" hx-swap="outerHTML">
     </div>
