--- a/views/sections/dashboard/index.html
+++ b/views/sections/dashboard/index.html
@@ -1,4 +1,4 @@
-<div class="mx-5 mr-8">
+<div class="lg:mx-2 mx-1">
   <div class="p-2 m-0">
     <div id="summary" hx-get="/dashboard/categories/summary" hx-trigger="revealed" hx-target="this" hx-swap="outerHTML">
     </div>
