--- a/views/sections/expenses/table.html
+++ b/views/sections/expenses/table.html
@@ -2,49 +2,76 @@
 <div id="table" hx-get="/expenses/table" hx-trigger="reloadExpensesTable from:body" hx-target="this"
   hx-swap="outerHTML">
   <div class="overflow-x-auto">
-    <button class="float-right m-2 mb-3 font-medium text-blue-500 hover:text-blue-400" hx-get="/expenses/add"
-      hx-target="#addRow" hx-swap="outerHTML">
-      <i class='bx bx-plus-medical'></i>New Expense
+    <div id="tableButtons" class="md:block hidden">
+    <button hx-get="/expenses/table?page_num={{ .PrevPage }}" hx-swap="outerHTML" hx-target="#table"
+      hx-include="#filters input" hx-vals='js:{categories: getSelectedCategories(), users: getFilteredUsers()}'
+      class="float-left m-2 mb-3 font-medium {{ if eq .CurrentPage 0 }} text-gray-500 {{else}} hover:text-indigo-900 text-indigo-500 {{end}}"
+      {{ if eq .CurrentPage 0 }} disabled {{end}}>
+      Prev
     </button>
-    <button id="applyAll" class="float-right m-2 mb-3 font-medium text-indigo-600 hover:text-indigo-500" hx-trigger="click">
-      <i class='bx bx-edit-alt' ></i>Apply all
+    <button hx-get="/expenses/table?page_num={{ .NextPage }}" hx-swap="outerHTML" hx-target="#table"
+      hx-include="#filters input" hx-vals='js:{categories: getSelectedCategories(), users: getFilteredUsers()}'
+      class="float-left m-2 mb-3 font-medium {{ if eq .CurrentPage .TotalPages }} text-gray-500 {{else}} hover:text-indigo-900 text-indigo-500 {{end}}"
+      {{ if eq .CurrentPage .TotalPages }} disabled {{end}}>
+      Next
     </button>
-    <button id="editAll" class="float-right m-2 mb-3 font-medium text-teal-600 hover:text-teal-500" hx-trigger="click">
-      <i class='bx bx-edit-alt' ></i>Edit all
-    </button>
+      <button class="float-right m-2 mb-3 font-medium text-blue-500 hover:text-blue-400" hx-get="/expenses/add"
+        hx-target="#addRow" hx-swap="outerHTML">
+        <i class='bx bx-plus-medical'></i>New Expense
+      </button>
+      <button id="applyAll" class="float-right m-2 mb-3 font-medium text-indigo-600 hover:text-indigo-500"
+        hx-trigger="click">
+        <i class='bx bx-edit-alt'></i>Apply all
+      </button>
+      <button id="editAll" class="float-right m-2 mb-3 font-medium text-teal-600 hover:text-teal-500"
+        hx-trigger="click">
+        <i class='bx bx-edit-alt'></i>Edit all
+      </button>
+      <div class="float-right m-2 mb-3">
+        <span class="text-sm text-gray-700 dark:text-gray-400">
+          Showing page <span class="font-semibold text-gray-900 dark:text-white">{{ .CurrentPage }}/{{ .TotalPages
+            }}</span>
+          (<span class="text-sm font-semibold text-gray-900-white">{{ .PageSize }}</span> entries)
+        </span>
+      </div>
+    </div>
+    <div class="float-right m-2 mb-3 md:hidden block">
+        (<span class="text-sm font-semibold text-gray-900-white">{{ .PageSize }}</span> entries)
+      </span>
+    </div>
     <table class="min-w-full border bg-neutral-50 shadow-md border-gray-300">
-      <thead class="rounded-full">
+      <thead class="rounded-full ">
         <tr class="bg-gray-100 border border-gray-300 text-gray-700 rounded-lg ">
-          <th class="px-4 py-3 text-left">Date</th>
-          <th class="px-4 py-3 text-left">Shop</th>
-          <th class="px-4 py-3 text-left">Product</th>
-          <th class="px-4 py-3 text-left">Category</th>
-          <th class="px-4 py-3 text-left">Users</th>
-          <th class="px-4 py-3 text-left">Amount</th>
-          <th class="px-4 py-3 text-left">Action</th>
+          <th class="px-2 py-3 text-left">Date</th>
+          <th class="px-2 py-3 text-left">Shop</th>
+          <th class="px-2 py-3 text-left md:block hidden">Product</th>
+          <th class="px-2 py-3 text-left">Category</th>
+          <th class="px-2 py-3 text-left">Users</th>
+          <th class="px-2 py-3 text-left">Amount</th>
+          <th class="px-2 py-3 text-left md:block hidden">Action</th>
         </tr>
       </thead>
       <tbody class="text-gray-700 text-md animate__headShake animate__animated">
         <tr id="addRow"></tr>
         {{range .Expenses}}
         <tr id="expenseRow{{ .ID }}" class="border-b border-blue-gray-200 p-0 animate__animated">
-          <td class="px-4 py-1">{{ .Date.Format "02-01-2006" }}</td>
-          <td class="px-4 py-1">{{.Shop}}</td>
-          <td class="px-4 py-1">{{.Product }}</td>
-          <td class="px-4 py-1">
+          <td class="px-2 py-1 md:block">{{ .Date.Format "02-01-2006" }}</td>
+          <td class="px-2 py-1 text-sm text-gray-500 ">{{.Shop}}</td>
+          <td class="px-2 py-1 md:block hidden ">{{.Product }}</td>
+          <td class="px-2 py-1">
             {{ $colors := nameToColor .Category.Name }}
             <span
               class='{{index $colors "bg" }} {{index $colors "txt" }} text-sm font-medium me-2 px-2.5 py-0.5 rounded'>{{.Category.Name}}</span>
           </td>
-          <td class="px-4 py-1">
+          <td class="px-2 py-1">
             {{range .Users}}
             {{ $userColor := nameToColor .TelegramUsername }}
             <span class='{{index $userColor "txt" }}'>{{.DisplayName}}</span>
             {{end}}
           </td>
-          <td class="px-4 py-1">${{printf "%.2f" .Amount}}</td>
-          <td class="px-4 py-1">
-            <button hx-get="/expenses/{{ .ID }}/edit" hx-target="#expenseRow{{.ID}}" hx-swap="outerHTML" 
+          <td class="px-2 py-1">${{printf "%.2f" .Amount}}</td>
+          <td class="px-2 py-1 md:block hidden">
+            <button hx-get="/expenses/{{ .ID }}/edit" hx-target="#expenseRow{{.ID}}" hx-swap="outerHTML"
               hx-push-url="true" hx-trigger="click, click from:#editAll"
               class="font-small text-cyan-700 hover:text-cyan-500">
               Edit
@@ -67,36 +94,34 @@
   <br>
 
   <!-- Pagination -->
-  <div class="flex flex-col items-center">
-    <span class="text-sm text-gray-700 dark:text-gray-400">
-      Showing page <span class="font-semibold text-gray-900 dark:text-white">{{ .CurrentPage }}/{{ .TotalPages }}</span>
-      (<span class="font-semibold text-gray-900 dark:text-white">{{ .PageSize }}</span> entries)
-    </span>
-    <div class="inline-flex mt-2 xs:mt-0">
-      <button hx-get="/expenses/table?page_num={{ .PrevPage }}" hx-swap="outerHTML" hx-target="#table"
-        hx-include="#filters input"
-        hx-vals='js:{categories: getSelectedCategories(), users: getFilteredUsers()}'
-        class="flex items-center justify-center px-4 h-10 text-base font-medium text-white rounded-s {{ if eq .CurrentPage 0 }} bg-gray-500 {{else}} hover:bg-indigo-900 bg-indigo-500 {{end}}"
-        {{ if eq .CurrentPage 0 }} disabled {{end}}>
-        <svg class="w-3.5 h-3.5 me-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
-          viewBox="0 0 14 10">
-          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-            d="M13 5H1m0 0 4 4M1 5l4-4" />
-        </svg>
-        Prev
-      </button>
-      <button hx-get="/expenses/table?page_num={{ .NextPage }}" hx-swap="outerHTML" hx-target="#table"
-        hx-include="#filters input"
-        hx-vals='js:{categories: getSelectedCategories(), users: getFilteredUsers()}'
-        class="flex items-center justify-center px-4 h-10 text-base font-medium text-white border-0 border-s border-gray-700 rounded-e {{ if eq .CurrentPage .TotalPages }} bg-gray-500 {{else}} hover:bg-indigo-900 bg-indigo-500 {{end}}"
-        {{ if eq .CurrentPage .TotalPages }} disabled {{end}}>
-        Next
-        <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
-          viewBox="0 0 14 10">
-          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-            d="M1 5h12m0 0L9 1m4 4L9 9" />
-        </svg>
-      </button>
-    </div>
-  </div>
+  <!-- <div class="flex flex-col items-center"> -->
+  <!--   <span class="text-sm text-gray-700 dark:text-gray-400"> -->
+  <!--     Showing page <span class="font-semibold text-gray-900 dark:text-white">{{ .CurrentPage }}/{{ .TotalPages }}</span> -->
+  <!--     (<span class="font-semibold text-gray-900 dark:text-white">{{ .PageSize }}</span> entries) -->
+  <!--   </span> -->
+  <!--   <div class="inline-flex mt-2 xs:mt-0"> -->
+  <!--     <button hx-get="/expenses/table?page_num={{ .PrevPage }}" hx-swap="outerHTML" hx-target="#table" -->
+  <!--       hx-include="#filters input" hx-vals='js:{categories: getSelectedCategories(), users: getFilteredUsers()}' -->
+  <!--       class="flex items-center justify-center px-2 h-10 text-base font-medium text-white rounded-s {{ if eq .CurrentPage 0 }} bg-gray-500 {{else}} hover:bg-indigo-900 bg-indigo-500 {{end}}" -->
+  <!--       {{ if eq .CurrentPage 0 }} disabled {{end}}> -->
+  <!--       <svg class="w-3.5 h-3.5 me-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" -->
+  <!--         viewBox="0 0 14 10"> -->
+  <!--         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" -->
+  <!--           d="M13 5H1m0 0 4 4M1 5l4-4" /> -->
+  <!--       </svg> -->
+  <!--       Prev -->
+  <!--     </button> -->
+  <!--     <button hx-get="/expenses/table?page_num={{ .NextPage }}" hx-swap="outerHTML" hx-target="#table" -->
+  <!--       hx-include="#filters input" hx-vals='js:{categories: getSelectedCategories(), users: getFilteredUsers()}' -->
+  <!--       class="flex items-center justify-center px-2 h-10 text-base font-medium text-white border-0 border-s border-gray-700 rounded-e {{ if eq .CurrentPage .TotalPages }} bg-gray-500 {{else}} hover:bg-indigo-900 bg-indigo-500 {{end}}" -->
+  <!--       {{ if eq .CurrentPage .TotalPages }} disabled {{end}}> -->
+  <!--       Next -->
+  <!--       <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" -->
+  <!--         viewBox="0 0 14 10"> -->
+  <!--         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" -->
+  <!--           d="M1 5h12m0 0L9 1m4 4L9 9" /> -->
+  <!--       </svg> -->
+  <!--     </button> -->
+  <!--   </div> -->
+  <!-- </div> -->
 </div>
