--- a/views/sections/dashboard/categorySummary.html
+++ b/views/sections/dashboard/categorySummary.html
@@ -27,7 +27,7 @@
   </div>
 </div>
 
-<h1 class="text-2xl font-bold mb-5">Expenses Summary</h1>
+<h1 class="text-2xl text-gray-600 font-bold mb-5">Expenses Summary</h1>
 <!-- Past Month Summary -->
 <div class="flex w-full p-1 flex-col xl:flex-row">
 
@@ -45,8 +45,8 @@
     </div>
 
     <div class="masonry">
-      {{$startOfLastMonth := .StartOfLastMonth}}
-      {{$endOfLastMonth := .EndOfLastMonth}}
+      {{$today := .Today}}
+      {{$startOfThisMonth:= .StartOfThisMonth}}
       {{range $id, $summary := .SummariesThisMonth.Summaries}}
       {{ $name := $summary.Category }}
       {{ $colors := nameToColor $name }}
@@ -55,14 +55,14 @@
         <h3 class="text-xl font-semibold">{{$summary.Category}}</h3>
         <p class="mt-2 text-bold">
           ${{printf "%.2f" $summary.Total}}
-          <button type="button" hx-trigger="click" hx-target="#tableView{{$id}}{{$endOfLastMonth}}" hx-url-push="true"
-            hx-get="/dashboard/table/mini?from-date={{ $startOfLastMonth }}&to-date={{ $endOfLastMonth}}&page_size=10000"
+          <button type="button" hx-trigger="click" hx-target="#tableView{{$id}}{{$today}}" hx-url-push="true"
+            hx-get="/dashboard/table/mini?from-date={{ $startOfThisMonth }}&to-date={{ $today}}&page_size=10000"
             class='text-bold text-sm border {{index $colors "border" }} hover:border-white hover:text-white p-1 h-auto float-right'
             hx-vals='js:{categories: "{{$id}}"}' hx-swap="innerHTML">
             View
           </button>
         </p>
-        <div id="tableView{{$id}}{{$endOfLastMonth}}" class="shadow-md overflow-/x-none"></div>
+        <div id="tableView{{$id}}{{$today}}" class="shadow-md overflow-/x-none"></div>
       </div>
       {{end}}
     </div>
@@ -76,7 +76,7 @@
       </div>
       <div class="float-right">
         <h3 class="text-xl block font-semibold">Total:
-          ${{printf "%.2f" .SummariesThisMonth.Total}}
+          ${{printf "%.2f" .SummariesPastMonth.Total}}
         </h3>
       </div>
     </div>
@@ -84,7 +84,7 @@
 
     <div class="masonry">
       {{$startOfLastMonth := .StartOfLastMonth}}
-      {{$endOfLastMonth := .EndOfLastMonth}}
+      {{$today := .EndOfLastMonth}}
       {{range $id, $summary := .SummariesPastMonth.Summaries}}
       {{ $name := $summary.Category }}
       {{ $colors := nameToColor $name }}
@@ -94,7 +94,7 @@
         <p class="mt-2 text-bold">
           ${{printf "%.2f" $summary.Total}}
           <button type="button" hx-trigger="click" hx-target="#tableView{{$id}}{{$startOfLastMonth}}" hx-url-push="true"
-            hx-get="/dashboard/table/mini?from-date={{ $startOfLastMonth }}&to-date={{ $endOfLastMonth}}&page_size=10000"
+            hx-get="/dashboard/table/mini?from-date={{ $startOfLastMonth }}&to-date={{ $today}}&page_size=10000"
             class='text-bold text-sm border {{index $colors "border" }} hover:border-white hover:text-white p-1 h-auto float-right'
             hx-vals='js:{categories: "{{$id}}"}' hx-swap="innerHTML">
             View
