--- a/views/sections/settings/telegram.html
+++ b/views/sections/settings/telegram.html
@@ -1,7 +1,7 @@
-<div id="telegram" class=" min-w-[740px] rounded-lg" hx-get="/settings/telegram"
+<div id="telegram" class="w-full rounded-lg" hx-get="/settings/telegram"
   hx-trigger="reloadTelegramConfig from:body" hx-target="this">
   <span class="text-xl block p-2 w-full lg:w-1/3 pt-2" style="color:#1DA1DE;"><i class='bx bxl-telegram'></i> Telegram</span>
-  <div class="min-h-[200px] block inline-flex border border-gray-300 rounded-lg p-3">
+  <div class="min-h-[200px] w-full block inline-flex border border-gray-300 rounded-lg p-3">
     <div id="telegram-not-table" class=" border border-gray-300 rounded-lg p-3 w-full flex flex-col lg:flex-row">
       <div class="w-full lg:w-1/2">
         <span class="text-md text-gray-800">Bot status
@@ -16,7 +16,7 @@
         <br>
         <span class="text-md text-gray-800">Allowed users:</span>
         <br>
-        <span class='text-indigo-700 bg-indigo-200 max-w-[50px] text-sm font-medium me-2 px-2.5 py-0.5 rounded'
+        <span class='text-indigo-700 bg-indigo-200 text-sm font-medium me-2 px-2.5 py-0.5 rounded'
           hx-trigger="revealed, click from:#updateUsers delay:1s" hx-swap="innerHTML" hx-target="this"
           hx-get="/telegram/users">-</span>
         <br>
