--- a/views/partials/sidebar.html
+++ b/views/partials/sidebar.html
@@ -34,7 +34,7 @@
         class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-600">
         <span class="inline-flex text-inherit items-center justify-center h-12 w-12 text-lg text-gray-400"><i
             class="text-inherit bx bxs-file-import"></i></span>
-        <span class="text-sm font-medium">Import CSV</span>
+        <span class="text-sm font-medium">Import</span>
       </button>
     </li>
     <li>
