--- a/views/sections/expenses/filter.html
+++ b/views/sections/expenses/filter.html
@@ -20,17 +20,39 @@
       <div class="flex flex-col w-1/2 mx-1">
         <label for="usersSelect" class="block text-sm font-medium text-gray-700">Users</label>
         <div class="border hover:text-teal-600 hover:border-teal-500">
-        <select id="usersSelect" name="usersSelect"
-          class="mt-1 mx-1 block w-full p-2 border border-gray-300  hover:text-teal-600 hover:border-teal-500  shadow-sm focus:outlimt-1 block w-full p-2 booder border-gray-300  shadow-sm focus:outline-none focus:ring-teal-600 focus:border-teal-600 sm:text-smne-none focus:ring-teal-600 focus:border-teal-600 sm:text-sm">
-        </select>
+      <select id="usersFilter"
+        class="js-example-basic-multiple w-1/2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 border-blue-500 block w-full"
+        name="users[]" multiple="multiple">
+        {{ range $id, $user := .Users }}
+        <option value="{{$id}}">{{$user.DisplayName}}</option>
+        {{end}}
+      </select>
+      <script>
+        $(document).ready(function () {
+          $('#usersFilter').select2({
+            theme: "classic"
+          });
+        });
+      </script>
         </div>
       </div>
       <div class="flex flex-col w-1/2 mx-1">
-        <label for="categoriesSelect" class="block text-sm font-medium text-gray-700">Category</label>
-        <div class="border hover:text-teal-600 hover:border-teal-500">
-        <select id="categoriesSelect" name="categoriesSelect"
-          class="mt-1 block w-full p-2 border border-gray-300  hover:text-teal-600 hover:border-teal-500 shadow-sm focus:outline-none focus:ring-teal-600 focus:border-teal-600 sm:text-sm">
-        </select>
+      <label for="categoriesFilter" class="block text-sm font-medium text-gray-700">Category</label>
+      <div class="border hover:text-teal-600 hover:border-teal-500">
+      <select id="categoriesFilter"
+        class="js-example-basic-multiple w-1/2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 border-blue-500 block w-full"
+        name="categories[]" multiple="multiple">
+        {{ range $id, $name := .Categories }}
+        <option value="{{$id}}">{{$name}}</option>
+        {{end}}
+      </select>
+      <script>
+        $(document).ready(function () {
+          $('#categoriesFilter').select2({
+            theme: "classic"
+          });
+        });
+      </script>
       </div>
       </div>
     </div>
@@ -59,114 +81,9 @@
     <button type="button" hx-trigger="click" hx-url-push="true" hx-get="/expenses/table" hx-target="#table"
       hx-include="#filters input, #filters select"
       hx-vals='js:{categories: getSelectedCategories(), users: getFilteredUsers()}'
+      hx-vals="js:{users: $('#usersFilter').select2('data').map(function(item){return item.id}).join(','), categories: $('#categoriesFilter').select2('data').map(function(item){return item.id}).join(',')}"
       class="inline-flex items-center px-4 py-2 border border-teal-600 shadow-sm text-sm text-teal-800 hover:text-teal-600 hover:border-teal-500 font-medium hover:bg-neutral-100 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-teal-600">
       Apply Filters
     </button>
   </div>
 </div>
-
-
-<script>
-  // Categories
-  var selectedCategories = [];
-  // {{range $id, $name:= .Categories}} 
-  // {{ if ne $name "unknown"}}
-  selectedCategories.push('{{$id}}')
-  // {{end}}
-  // {{end}}
-  // Initialize the Multi Select dropdown from multiselect.js
-  new MultiSelect('#categoriesSelect', {
-    data: [
-      // This can be commented on js but rendered anyway
-      // {{range $id, $name:= .Categories}} 
-      // {{ if eq $id "unknown"}}
-      {
-        value: '{{$id}}',
-        text: '{{$name}}',
-        selected: false
-      },
-      // {{else}}
-      {
-        value: '{{$id}}',
-        text: '{{$name}}',
-        selected: true
-      },
-      // {{end}}
-      // {{end}}
-    ],
-    placeholder: 'Select an option',
-    search: true,
-    selectAll: true,
-    // dropdownHeight: "500px",
-    listAll: false,
-    max: 0,
-    onChange: function (value, text, element) {
-      console.log('Change:', value, text, element);
-    },
-    onSelect: function (value, text, element) {
-      // Add selected value to the array
-      if (!selectedCategories.includes(value)) {
-
-        selectedCategories.push(value);
-      }
-      console.log('Selected:', value, text, element);
-    },
-    onUnselect: function (value, text, element) {
-      // Remove unselected value from the array
-      selectedCategories = selectedCategories.filter(item => item !== value);
-      console.log('Unselected:', value, text, element);
-    }
-  });
-  function getSelectedCategories() {
-    return selectedCategories.join(',');
-  }
-</script>
-<script>
-  // Users
-  var filteredUsers = [];
-  // {{range $id, $value:= .Users}} 
-  filteredUsers.push('{{$id}}')
-  // {{end}}
-  filteredUsers.push('{{.NoUserID}}')
-  // Initialize the Multi Select dropdown from multiselect.js
-  new MultiSelect('#usersSelect', {
-    data: [
-      // This can be commented on js but rendered anyway
-      // {{range $id, $value:= .Users}} 
-      {
-        value: '{{$id}}',
-        text: '{{$value.DisplayName}}',
-        selected: true
-      },
-      // {{end}}
-      {
-        value: '{{.NoUserID}}',
-        text: 'No User',
-        selected: true
-      },
-    ],
-    placeholder: 'Select an option',
-    search: true,
-    selectAll: true,
-    listAll: false,
-    max: 0,
-    onChange: function (value, text, element) {
-      console.log('Change:', value, text, element);
-    },
-    onSelect: function (value, text, element) {
-      // Add selected value to the array
-      if (!filteredUsers.includes(value)) {
-        filteredUsers.push(value);
-      }
-      console.log('Selected:', value, text, element);
-    },
-    onUnselect: function (value, text, element) {
-      // Remove unselected value from the array
-      console.log(value)
-      filteredUsers = filteredUsers.filter(item => item !== value);
-    }
-  });
-  function getFilteredUsers() {
-    return filteredUsers.join(',');
-  }
-</script>
