--- a/views/sections/expenses/filter.html
+++ b/views/sections/expenses/filter.html
@@ -20,40 +20,40 @@
       <div class="flex flex-col w-1/2 mx-1">
         <label for="usersSelect" class="block text-sm font-medium text-gray-700">Users</label>
         <div class="border hover:text-teal-600 hover:border-teal-500">
-      <select id="usersFilter"
-        class="js-example-basic-multiple w-1/2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 border-blue-500 block w-full"
-        name="users[]" multiple="multiple">
-        {{ range $id, $user := .Users }}
-        <option value="{{$id}}">{{$user.DisplayName}}</option>
-        {{end}}
-      </select>
-      <script>
-        $(document).ready(function () {
-          $('#usersFilter').select2({
-            theme: "classic"
-          });
-        });
-      </script>
+          <select id="usersFilter" styel="width: 100%;"
+            class="js-example-basic-multiple w-full bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 border-blue-500 block w-full"
+            name="users[]" multiple="multiple">
+            {{ range $id, $user := .Users }}
+            <option value="{{$id}}">{{$user.DisplayName}}</option>
+            {{end}}
+          </select>
+          <script>
+            $(document).ready(function () {
+              $('#usersFilter').select2({
+                theme: "classic"
+              });
+            });
+          </script>
         </div>
       </div>
       <div class="flex flex-col w-1/2 mx-1">
-      <label for="categoriesFilter" class="block text-sm font-medium text-gray-700">Category</label>
-      <div class="border hover:text-teal-600 hover:border-teal-500">
-      <select id="categoriesFilter"
-        class="js-example-basic-multiple w-1/2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 border-blue-500 block w-full"
-        name="categories[]" multiple="multiple">
-        {{ range $id, $name := .Categories }}
-        <option value="{{$id}}">{{$name}}</option>
-        {{end}}
-      </select>
-      <script>
-        $(document).ready(function () {
-          $('#categoriesFilter').select2({
-            theme: "classic"
-          });
-        });
-      </script>
-      </div>
+        <label for="categoriesFilter" class="block text-sm font-medium text-gray-700">Category</label>
+        <div class="border hover:text-teal-600 hover:border-teal-500">
+          <select id="categoriesFilter" styel="width: 100%;"
+            class="js-example-basic-multiple w-1/2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 border-blue-500 block w-full"
+            name="categories[]" multiple="multiple">
+            {{ range $id, $name := .Categories }}
+            <option value="{{$id}}">{{$name}}</option>
+            {{end}}
+          </select>
+          <script>
+            $(document).ready(function () {
+              $('#categoriesFilter').select2({
+                theme: "classic"
+              });
+            });
+          </script>
+        </div>
       </div>
     </div>
     <div class="flex flex-col">
