--- a/views/partials/sidebar.html
+++ b/views/partials/sidebar.html
@@ -2,9 +2,10 @@
 <div id="sidebar"
   class="hidden lg:flex min-h-screen flex-col w-auto border-r border-neutral-200 shadow-sm bg-stone-50 overflow-hidden">
   <div class="flex items-center justify-center h-25 mt-2 pointer-events-none">
-    <img width="90" src="/assets/img/logo.png" alt="">
-    <h1 class="text-2xl pr-2 pt-4 text-slate-800">Expense<br>
-      <span style="color:#229364;" class="">Mate</span>
+    <img width="90" src="/assets/img/logo.png" alt="" />
+    <h1 class="text-2xl pr-2 pt-4 text-slate-800">
+      Expense<br />
+      <span style="color: #229364" class="">Mate</span>
     </h1>
   </div>
   <ul class="flex flex-col mx-4 py-4">
@@ -43,7 +44,7 @@
         hx-target="#contenido" hx-push-url="true"
         class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-600">
         <span class="inline-flex items-center text-inherit justify-center h-12 w-12 text-lg text-gray-400">
-          <i class='text-inherit bx bx-cog'></i>
+          <i class="text-inherit bx bx-cog"></i>
         </span>
         <span class="text-sm font-medium">Settings</span>
       </button>
@@ -59,18 +60,20 @@
   </ul>
   <div class="absolute left-0 text-lg text-gray-500 bottom-0 m-2">
     <a href="https://github.com/contre95/expense-mate" target="_blank">
-      <i class='bx bxl-github text-3xl'></i>
+      <i class="bx bxl-github text-3xl"></i>
     </a>
   </div>
 </div>
 <script>
   // Function to initialize select2
   function initializeSelect2() {
-    $('.js-example-basic-multiple').select2({
-      theme: "classic"
+    $(".js-example-basic-multiple").select2({
+      theme: "classic",
     });
   }
   // Initialize select2 after htmx from:body load
-  document.body.addEventListener('htmx:load', function (event) {initializeSelect2();});
+  document.body.addEventListener("htmx:load", function (event) {
+    initializeSelect2();
+  });
 </script>
 {{end}}
